--- a/craft/templates/notes.html
+++ b/craft/templates/notes.html
@@ -2,9 +2,11 @@
 
 {% block main %}
 
-  <h2>{{entry.title | typogrify}}</h2>
-  <p>{{entry.subtitle | typogrify}}</p>
+  <article>
+    <h2>{{entry.title | typogrify}}</h2>
+    <p>{{entry.subtitle | typogrify}}</p>
 
-  {{entry.body}}
+    {{entry.body}}
+  </article>
 
 {% endblock %}
