--- a/src/scss/2-base/_base.scss
+++ b/src/scss/2-base/_base.scss
@@ -1,628 +1,11 @@
-* { 
-    box-sizing:border-box;
-    -moz-box-sizing:border-box; 
-    -webkit-box-sizing:border-box;  
+.ma0 {
+  margin: 0;
 }
-  
-div, article, section, header, footer, nav, figure, notes, li { 
-    position: relative; 
-} 
-      
-html, body { 
-    background: #fff;
-    font-size: .9em;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased; 
-}
-
-body, figcaption em { 
-    color: #333;
-    font: 400 90%/1.875em 'andale mono', courier, sans-serif;
-}
-
-strong, h1 a, h3, h4, div.primary h2, li cite, h3 cite { 
-    font-style: normal; 
-}
-
-em, em strong, strong em  h1, label, figcaption, article.single p:first-child, p.note, p.small-print, blockquote + cite, li.yearly-archive p span, div#comments ol li article header h3 + p { 
-    font-style: italic; 
-}
-
-h1 { 
-    color: rgba(0,0,0,0.3); 
-    font-size: 1.0em; 
-    font-weight: normal; 
-}
-
-h1 a { 
-    color: #333;  
-}
-
-h1 a:hover { 
-    text-decoration: none;
-}
-
-h2 { 
-    font-size: 1.875em; 
-    letter-spacing: -0.025em; 
-    line-height: 1.3125em;
-    font-weight: bold;
-}
-
-h3, h4 { 
-    font-size: 1.125em; 
-    padding: 2em 0 0.5em 0; 
-    font-weight: bold;
-}
-
-h3 + h4 { 
-    padding-top: 0; 
-}
-
-p + h3, li + h3 { 
-    padding-top: 1.5em; 
-} 
-
-a { 
-    color: #333; 
-    cursor: default; 
-    text-decoration: none;
-    -webkit-transition: color 0.2s ease-in-out; 
-    -moz-transition: color 0.2s ease-in-out; 
-    -o-transition: color 0.2s ease-in-out; 
-    transition: color 0.2s ease-in-out; 
-}
-
-@-moz-document url-prefix() {
-    a { 
-        display: inline-block;  
-    }
-}
-
-p a { 
-    text-decoration: underline;
-}
-
-p a:hover { 
-    text-decoration: none;
-}
-
-li a {
-    text-decoration: none;
-}
-
-h2 a, figcaption a { 
-    color: #333;
-    text-decoration: underline;  
-}
-  
-h2 + p a, figcaption a, p.note a, p.small-print a { 
-    color: rgba(0,0,0,0.3); 
-}
-
-h3 a:hover, h2 + p a:hover, figcaption a:hover, p.note a:hover, p.small-print a:hover, li a:hover {  
-    text-decoration: none;
-}
-
-p, li { 
-    padding: 0.5em 0;
-}
-
-li { 
-    list-style:none; 
-}
-
-ul li { 
-    list-style-type: disc; 
-    margin-left: 1em; 
-}
-
-article ul li{ 
-    list-style-type: disc; 
-    margin-left: 1em; 
-}
-
-article ol li { 
-    list-style-type: upper-roman;
-    margin-left: 1em; 
-}
-
-notes ul li{ 
-    list-style-type: lower-latin; 
-}
-
-blockquote {
-        min-height: .6em;
-        position: relative;
-    }
-
-blockquote:before {
-    position: relative;
-    color: #ddd;
-    content: '\201C';
-    font-family: monospace;
-    font-size: 5em;
-    left: 0;
-    line-height: 1;
-    top: .22em;
-}
-      
-blockquote blockquote:before {
-    content: '\2018';
-}
-
-blockquote p { 
-    margin: 0.14em 0; 
-    padding-left: 1em; 
-}
-
-blockquote + p cite{ 
-    display: block; 
-    margin-top: -1em; 
-    padding-bottom: 1em; 
-    text-align: right; 
-}
-
-article.single p:first-child + p { 
-    font-size: 1.875em; 
-    line-height: 1.5em; 
-}
-
-code {
-    font-size: 0.85em;
-    padding: 3px 5px;
-}
-
-pre {
-    background: #3F3F3F;
-    margin: 30px 0px;
-    padding-top: 20px !important;
-    padding-bottom: 10px !important;
-    -webkit-font-smoothing: subpixel-antialiased;
-}
-
-pre code {
-    background: none;
-    display: block;
-    padding: 0;
-    overflow: auto;
-    width: 100%;
-}
-
-h2 + p { 
-    color: rgba(0,0,0,0.3); 
-    padding: 1.5em 0; 
-}
-
-p.note { 
-    color: rgba(0,0,0,0.3); 
-}
-
-figcaption, p.small-print, div.primary h2, div.primary p { 
-    color: rgba(0,0,0,0.3); 
-}
-
-div.primary h2 { 
-    font-size: 1em; 
-}
-
-p.note { 
-    padding-bottom: 1em; 
-}
-
-p.continue { 
-    padding-top: 2em; 
-}
-
-p.small-print { 
-    padding: 8em 0 1em 0; 
-}
-
-cite { 
-    font-style: normal; 
-}
-  
-div.primary { 
-    background: #fcfcf9; 
-    padding: 5%; 
-}
-
-div.content { 
-    padding: 5%; 
-}
-  
-header nav ul { 
-    border: none;
-    padding: 1em 0 0 0; 
-}
-
-header nav ul li { 
-    display: inline; 
-    padding: 0 1em 0 0; 
-}
-
-header nav ul li a { 
-    color: rgba(0,0,0,0.3);
-}
-
-header nav ul li a:hover { 
-    color: #333; 
-}
-
-body.home header nav ul li a.active { 
-    color: #333; 
-}
-
-div.content img { 
-    margin: 1em 0; 
-    width: 100%; 
-}
-
-article figure figcaption { 
-    padding: 0 5% 2em 0; 
-}
-  
-div.video-wrapper { 
-    margin-bottom: 1em; 
-}
-
-p iframe { 
-    margin-left: -40%; 
-    width: 140%; 
-}
-  
-body.blog div.content > ol li:first-child { 
-    padding-top: 0; 
-}
-
-li.yearly-archive p span { 
-    color: rgba(0,0,0,0.3); 
-    display: block; 
-}
-
-li.yearly-archive h2 + p { 
-    padding-bottom: 0.5em; 
-}
-
-li.yearly-archive h2 + p a { 
-    color: #333; 
-}
-
-li.yearly-archive h2 + p a:hover { 
-    color: #333; 
-}
-  
-body.about h2 + img { 
-    margin-top: 2em; 
-}
-
-body.about h2 span { 
-    display: block; 
-    padding-top: 0.5em; 
-}
-  
-@media screen and (min-width:600px) {
-    html { 
-        padding: 0 8%; 
-    }
-    
-    body { 
-        margin: 0 auto; 
-    }
-    
-    div.fauxcolumn { 
-        background: #fdfdf7;
-        bottom: 0; 
-        left: 0; 
-        position: fixed; 
-        top: 0; 
-        width: 34.755%;  
-    }
-    
-    div.primary { 
-        background: none; 
-        float: left; 
-        padding: 8em 0; 
-        width: 32%; 
-    }
-    
-    div.primary div div { 
-        border-top: 1px solid rgba(0,0,0,0.05); 
-        padding: 1em 0 3em 0; 
-    }
-    
-    div.content { 
-        float: left; 
-        padding: 3.65em 0 8em 0; 
-        width: 68%; 
-    }
-    
-    div.ads { 
-        display: block; 
-    }
-    
-    h1, div.ads h2, div.ads p, div.ads span { 
-        line-height: 1.875em; 
-        width: 90%; 
-    }
-    
-    div.ads span { 
-        display: block; 
-    }
-    
-    header nav ul { 
-        padding: 2em 0 3em 0; 
-    }
-    
-    header nav ul li { 
-        display: block; 
-        padding: 0; 
-    }
-    
-    #disqus_thread, h2 { 
-        padding-top: 2em; 
-    }
-    
-    div.content h2, div.content h3, div.content h4, div.content p, article ul, article ol, pre, blockquote { 
-        padding-left: 5%; 
-    }
-    
-    form input, form textarea { 
-        margin-left: 5%; 
-    }
-    
-    div.content blockquote p { 
-        padding-left: 1em; 
-    }
-    
-    article figure figcaption { 
-        padding-left: 5%; 
-    }
-    
-    div#comments ol li article header div.gravatar-container { 
-        left: 5%; 
-    }
-    
-    div#comments ol li article header h3, div#comments ol li article header h3 + p { 
-        padding: 0 0 0 20%; 
-    }
-}
-  
-@media screen and (min-width:900px) {
-    h2#art-direction { 
-        padding-left: 15%; 
-    }
-
-    #disqus_thread, div.content h2, div.content h3, div.content h4, div.content p, article ul, article ol, pre, blockquote { 
-        padding-left: 28.787%; 
-    }
-    
-    form input, form textarea { 
-        margin-left: 28.787%;
-        width: 71%; 
-    }
-    
-    article figure figcaption { 
-        left: 0; 
-        padding: 0.5em 0 0 5%; 
-        position: absolute; 
-        width: 25%; 
-    }
-    
-    div#comments ol li article header div.gravatar-container { 
-        left: 15%; 
-    }
-    
-    div#comments ol li article header h3, div#comments ol li article header h3 + p { 
-        padding: 0 0 0 28.787%;
-    }
-}
-  
-@media screen and (min-width:1200px) {
-    body { 
-        font-size: 100%; 
-    }
-}
-  
-@media screen and (min-width:1400px) {
-    html { 
-        padding:0 16%; 
-    }
-    
-    div.fauxcolumn { 
-        width: 37.75%; 
-    }
-}
-
-@media screen and (min-width:1500px) {
-    div.ads div.primary-ad a.ad-image img {
-        float: left; 
-        margin: 1em 1em 0.5em 0; 
-    }
-}
-  
-@media screen and (min-width:1800px) {
-    body { 
-        font-size: 110%; 
-    }
-}
-
-@media screen and (min-width:2000px) { 
-    body { 
-        font-size: 115%; 
-    } 
-}
-  
-@media screen and (min-width:2400px) {
-    html { 
-        padding: 0 23%; 
-    }
-    
-    div.fauxcolumn { 
-        width: 40.25%; 
-    }
-}
-
-pre code {
-  color: #dcdcdc;
-}
-
-pre .keyword,
-pre .tag,
-pre .css .class,
-pre .css .id,
-pre .lisp .title,
-pre .nginx .title,
-pre .request,
-pre .status {
-  color: #e3ceab;
-}
-
-pre .django .template_tag,
-pre .django .variable,
-pre .django .filter .argument {
-  color: #dcdcdc;
-}
-
-pre .number,
-pre .date {
-  color: #8cd0d3;
-}
-
-pre .dos .envvar,
-pre .dos .stream,
-pre .variable,
-pre .apache .sqbracket {
-  color: #efdcbc;
-}
-
-pre .dos .flow,
-pre .diff .change,
-pre .python .exception,
-pre .python .built_in,
-pre .literal,
-pre .tex .special {
-  color: #efefaf;
-}
-
-pre .diff .chunk,
-pre .ruby .subst {
-  color: #8f8f8f;
-}
-
-pre .dos .keyword,
-pre .python .decorator,
-pre .title,
-pre .haskell .type,
-pre .diff .header,
-pre .ruby .class .parent,
-pre .apache .tag,
-pre .nginx .built_in,
-pre .tex .command,
-pre .input_number {
-    color: #efef8f;
-}
-
-pre .dos .winutils,
-pre .ruby .symbol,
-pre .ruby .symbol .string,
-pre .ruby .symbol .keyword,
-pre .ruby .symbol .keymethods,
-pre .ruby .string,
-pre .ruby .instancevar {
-  color: #dca3a3;
-}
-
-pre .diff .deletion,
-pre .string,
-pre .tag .value,
-pre .preprocessor,
-pre .built_in,
-pre .sql .aggregate,
-pre .javadoc,
-pre .smalltalk .class,
-pre .smalltalk .localvars,
-pre .smalltalk .array,
-pre .css .rules .value,
-pre .attr_selector,
-pre .pseudo,
-pre .apache .cbracket,
-pre .tex .formula {
-  color: #cc9393;
-}
-
-pre .shebang,
-pre .diff .addition,
-pre .comment,
-pre .java .annotation,
-pre .template_comment,
-pre .pi,
-pre .doctype {
-  color: #7f9f7f;
-}
-
-pre .coffeescript .javascript,
-pre .xml .css,
-pre .xml .javascript,
-pre .xml .vbscript,
-pre .tex .formula {
-  opacity: 0.5;
-}
-
-ul.gridview {
-display: flex;
-justify-content: flex-start;
-flex-wrap: wrap;
-align-items: baseline;
-}
-
-@media (min-width: 900px) {
-  ul.gridview li {
-  width: 25%;
-  }
-}
-
-@media (min-width: 750px) {
-  ul.gridview li {
-    width: 33.333333%;
-    padding-right: 40px;
-  }
-}
-
-@media (min-width: 700px) {
-  ul.gridview li {
-    width: 50%;
-  }
-}
-
-@media (min-width: 600px) {
-  ul.gridview li {
-    width: 33.333333%;
-  }
-}
-
-ul.gridview li {
-  width: 50%;
-  padding-right: 20px;
-  margin-bottom: 40px;
-  font-size: 14px;
-  line-height: 20px;
-  -webkit-font-smoothing: subpixel-antialiased;
-  list-style: none;
-}
-
-ul.gridview li a {
-    color: #222;
-    text-decoration: none;
-}
 
-ul.gridview li a img {
-    width: 100%;
-    margin-bottom: 10px;
-    transition: all 0.1s ease-out;
+.pa0 {
+  padding: 0;
 }
 
-ul.gridview li a small {
-    display: block;
-    color: rgba(0, 0, 0, 0.5);
+.fixed {
+  position: fixed;
 }
