--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,9 @@
 @charset 'utf-8';
 
-@import '1-vendors/reset';
+@import '1-vendors/normalize';
+@import '1-vendors/flexboxgrid';
 @import '2-base/vars';
 @import '2-base/base';
+@import '2-base/type';
+@import '3-layouts/nav';
+@import '3-layouts/favs';
