--- a/craft/templates/photos/index.html
+++ b/craft/templates/photos/index.html
@@ -2,8 +2,6 @@
 
 {% block main %}
 
-  {% for entry in craft.entries.section('photos').limit(10) %}
-
-  {% endfor %}
+  <h2>Hello</h2>
 
 {% endblock %}
