--- a/src/scss/3-layouts/_nav.scss
+++ b/src/scss/3-layouts/_nav.scss
@@ -1,3 +1,10 @@
+.nav-cont {
+  background: #f6f6ef;
+  margin: -16px;
+  margin-bottom: 0;
+  padding: 16px;
+}
+
 @media only screen and (min-width: 62em) {
   .nav-sidebar {
     background: #f6f6ef;
