--- a/craft/templates/favs/_entry.html
+++ b/craft/templates/favs/_entry.html
@@ -14,45 +14,40 @@
     </ul>
   </nav>
 
-  <ul class="gridview">
 
+  <div class="row">
     {% for block in entry.favs %}
     
       {% if block.type == 'favContent' %}
-        <li class="favs-container">
+        <div class="col-xs-6 col-sm-4 col-md-4 favs-container">
           <a href="{{block.contentLink}}">
-            <figure>
-              {% set image = block.contentImage.first() %}
-              {% set transformedImages = craft.imager.transformImage(image,
-                [
-                  { width: 400 },
-                  { width: 300, jpegQuality: 65 },
-                ],
-                {
-                  format: 'jpg',
-                  allowUpscale: false,
-                  mode: 'crop',
-                  jpegQuality: 80,
-                  interlace: true
-                }
-              ) %}
-              <img class="img-fluid mb-3"
-                src="{{craft.imager.base64Pixel(2,1)}}"
-                sizes="100vw"
-                srcset="{{craft.imager.srcset(transformedImages)}}"
-                alt="{{block.contentTitle}}">
+            {% set image = block.contentImage.first() %}
+            {% set transformedImages = craft.imager.transformImage(image,
+              [
+                { width: 400 },
+                { width: 300, jpegQuality: 65 },
+              ],
+              {
+                format: 'jpg',
+                allowUpscale: false,
+                mode: 'crop',
+                jpegQuality: 80,
+                interlace: true
+              }
+            ) %}
+            <img class="img-fluid mb-3"
+              src="{{craft.imager.base64Pixel(2,1)}}"
+              sizes="100vw"
+              srcset="{{craft.imager.srcset(transformedImages)}}"
+              alt="{{block.contentTitle}}">
 
-              <figcaption>
-                <p><b>{{block.contentTitle | typogrify}}</b></p>
-                <small>{{block.contentFullName | typogrify}}</small>
-              </figcaption>
-            </figure>
+              <p><b>{{block.contentTitle | typogrify}}</b></p>
+              <small>{{block.contentFullName | typogrify}}</small>
           </a>
-        </li>
       {% endif %}
     
     {% endfor %}
-  </ul>
+
   </div>
 
 {% endblock %}
