--- a/src/scss/2-base/_base.scss
+++ b/src/scss/2-base/_base.scss
@@ -1,10 +1,8 @@
-.nav-cont {
-  padding: 1.5rem;
-  background: #f6f6ef;
+body {
+  padding: 16px;
 }
 
 .cont {
-  padding: 1.5rem;
   z-index: -1000;
 }
 
