--- a/craft/plugins/comments/templates/_forms/templates/comment.html
+++ b/craft/plugins/comments/templates/_forms/templates/comment.html
@@ -3,10 +3,10 @@
         {% for comment in comments %}
             <li class="comment-single" id="comment-{{ comment.id }}" data-id="{{ comment.id }}" itemprop="comment" itemscope itemtype="http://schema.org/UserComments">
                 {# Get the comment template depending on status #}              
-                {% include '_forms/templates/comment-' ~ comment.status %}
+                {% include '_comments/comment-' ~ comment.status %}
 
                 {# An inline form for easy reply #}
-                {% include '_forms/templates/form' %}
+                {% include '_comments/form' %}
 
                 {% if comment.hasDescendants %}
                     {{ _self.printComments(element, comment.children, settings) }}
