--- a/src/scss/2-base/_base.scss
+++ b/src/scss/2-base/_base.scss
@@ -14,6 +14,12 @@ body {
   padding: 0;
 }
 
+hr {
+  border: none;
+  border-top: 1px solid $text-divider;
+  margin: 2rem 0;
+}
+
 .menu {
   list-style-type: none !important;
   margin: 0;
