--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,5 +5,7 @@
 @import '2-base/vars';
 @import '2-base/base';
 @import '2-base/type';
+@import '2-base/btn';
 @import '3-layouts/nav';
 @import '3-layouts/favs';
+@import '3-layouts/comments';
