--- a/src/scss/2-base/_base.scss
+++ b/src/scss/2-base/_base.scss
@@ -1,5 +1,6 @@
 body {
   padding: 16px;
+  position: relative;
 }
 
 .cont {
@@ -12,6 +13,10 @@ body {
 
 .pa0 {
   padding: 0;
+}
+
+.page-content {
+  padding: 32px 0;
 }
 
 hr {
@@ -46,6 +51,7 @@ hr {
 
   .page-main {
     margin-left: calc(222px + 14%);
+    position: relative;
   }
 
   .page-content {
