--- a/src/scss/3-layouts/_nav.scss
+++ b/src/scss/3-layouts/_nav.scss
@@ -1,7 +1,6 @@
 .nav-cont {
   background: #f6f6ef;
   margin: -16px;
-  margin-bottom: 0;
   padding: 16px;
 }
 
@@ -25,3 +24,13 @@
     padding: 1em 0 3em;
   }
 }
+
+@media only screen and (max-height: 500px) and (min-width: 62em)  {
+  .nav-sidebar {
+    position: absolute;
+    padding-bottom: 0;
+    height: auto;
+    bottom: -16px;
+  }
+}
+
