--- a/src/scss/2-base/_type.scss
+++ b/src/scss/2-base/_type.scss
@@ -258,9 +258,9 @@ p.note {
   padding-bottom: 1em;
 }
 
-// p.continue {
-//   padding-top: 2rem;
-// }
+p.continue {
+  padding-top: 2rem;
+}
 
 cite {
   font-style: normal;
