--- a/craft/templates/_comments/comment-approved.html
+++ b/craft/templates/_comments/comment-approved.html
@@ -8,7 +8,7 @@
 
         <span itemprop="creator" itemscope itemtype="http://schema.org/Person">
           <span itemprop="name">
-            {{ comment.author.fullName ? comment.author.fullName : comment.author }} said:
+            {{ comment.author }} said:
           </span>
         </span>
       </span>
