--- a/craft/templates/_comments/comment-trashed.html
+++ b/craft/templates/_comments/comment-trashed.html
@@ -1,22 +1,18 @@
 <div class="comment-container">
+  <div class="comment-text">
+  <span class="comment-heading">
+    <span class="title">
+    <time itemprop="commentTime" datetime="{{ comment.dateCreated | date('c') }}">
+      On {{ comment.dateCreated | date('M jS, Y') }},
+    </time>
+
     <span itemprop="creator" itemscope itemtype="http://schema.org/Person">
-        <div class="comment-image" itemprop="image">
-            <img src="{{ resourceUrl('/images/user.svg') }}" />
-        </div>
+      <span itemprop="name">
+        User said:
+      </span>
     </span>
-
-    <div class="comment-text">
-        <span class="comment-heading">
-            <span itemprop="creator" itemscope itemtype="http://schema.org/Person">
-                <span class="title" itemprop="name">User</span>
-            </span>
-
-            <span class="meta">
-                <time itemprop="commentTime" datetime="{{ comment.dateCreated | date('c') }}">
-                    {{ comment.dateCreated | date('M jS, Y') }}
-                </time>
-            </span>
-        </span>
+    </span>
+  </span>
 
         <div class="comment-content" itemprop="commentText">
             <p>[Comment deleted]</p>
