--- a/craft/templates/_comments/comment-spam.html
+++ b/craft/templates/_comments/comment-spam.html
@@ -1,56 +1,57 @@
 <div class="comment-container">
+  <div class="comment-text">
+  <span class="comment-heading">
+    <span class="title">
+    <time itemprop="commentTime" datetime="{{ comment.dateCreated | date('c') }}">
+      On {{ comment.dateCreated | date('M jS, Y') }},
+    </time>
+
     <span itemprop="creator" itemscope itemtype="http://schema.org/Person">
-        <div class="comment-image" itemprop="image">
-            {% if comment.isGuest() %}
-                <img src="{{ resourceUrl('/images/user.svg') }}" />
-            {% else %}
-                <img src="{{ comment.author.photoUrl ? comment.author.photoUrl : resourceUrl('/images/user.svg') }}" />
-            {% endif %}
-        </div>
+      <span itemprop="name">
+        {{ comment.author }} said:
+      </span>
     </span>
+    </span>
+  </span>
 
-    <div class="comment-text">
-        <span class="comment-heading">
-            <span itemprop="creator" itemscope itemtype="http://schema.org/Person">
-                <span class="title" itemprop="name">
-                    {{ comment.author.fullName ? comment.author.fullName : comment.author }}
-                </span>
-            </span>
-
-            <span class="meta">
-                <time itemprop="commentTime" datetime="{{ comment.dateCreated | date('c') }}">
-                    {{ comment.dateCreated | date('M jS, Y') }}
-                </time>
-            </span>
-        </span>
-
-        <div class="comment-content" itemprop="commentText">
-            <p>[Comment marked as spam]</p>
-        </div>
-
-        <div class="meta-buttons">
-            {% if settings.allowVoting %}
-                <div class="comment-votes">
-                    <span class="count">{{ comment.voteCount }} votes</span>
-
-                    {% if comment.canUpVote %}
-                        <a href="{{ comment.upvoteActionUrl }}" class="comment-vote-up">
-                            <span class="glyphicon glyphicon-chevron-up"></span>
-                        </a>
-                    {% endif %}
-
-                    {% if comment.canDownVote %}
-                        <a href="{{ comment.downvoteActionUrl }}" class="comment-vote-down">
-                            <span class="glyphicon glyphicon-chevron-down"></span>
-                        </a>
-                    {% endif %}
-                </div>
-            {% endif %}
-
-            <a href="#" class="comment-toggle">
-                <span class="glyphicon glyphicon-comment"></span>
-                {{ comment.descendants | length }} comments
-            </a>
-        </div>
+    <div class="comment-content" itemprop="commentText">
+        <p>[Comment marked as spam]</p>
     </div>
+
+    <div class="comment-content" itemprop="commentText">
+      {% if comment.isFlagged %}
+        <p>[Comment marked as inappropriate]</p>
+      {% elseif comment.isPoorlyRated %}
+        <p>[Comment hidden due to low rating]</p>
+      {% else %}
+        <p>{{ comment.comment | nl2br }}</p>
+      {% endif %}
+    </div>
+
+    {# Inline edit form (initially hidden) - only available on approved comment #}
+    {% if not comment.isFlagged and not comment.isPoorlyRated %}
+      {% include '_comments/form-edit' %}
+    {% endif %}
+
+    <div class="meta-buttons">
+      {% if not comment.isClosed %}
+        <a href="#" class="comment-reply" itemprop="replyToUrl">
+        </span>Reply</a>
+      {% endif %}
+
+      {% if currentUser %}
+        {% if comment.canEdit() %}
+          <a href="#" class="comment-edit">
+            <span class="glyphicon glyphicon-edit"></span>Edit
+          </a>
+        {% endif %}
+
+        {% if comment.canTrash() %}
+          <a href="{{ comment.trashActionUrl }}" class="comment-delete">
+            <span class="glyphicon glyphicon-remove"></span>Delete
+          </a>
+        {% endif %}
+      {% endif %}
+    </div>
+  </div>
 </div>
