--- a/src/scss/2-base/_base.scss
+++ b/src/scss/2-base/_base.scss
@@ -7,12 +7,20 @@ body {
   z-index: -1000;
 }
 
+.img-fluid {
+  max-width: 100%;
+}
+
 .ma0 {
   margin: 0;
 }
 
 .pa0 {
   padding: 0;
+}
+
+.pt3 {
+  padding-top: 30px;
 }
 
 .page-content {
