--- a/src/scss/3-layouts/_favs.scss
+++ b/src/scss/3-layouts/_favs.scss
@@ -1,3 +1,6 @@
+.favs-container {
+  margin-bottom: 30px;
+}
 
 .favs-container a {
   color: $text-primary;
@@ -6,11 +9,27 @@
   img {
     width: 100%;
     margin-bottom: 10px;
-    transition: all 0.1s ease-out;
+    transition: all 0.3s ease-out;
+    vertical-align: bottom;
+  }
+
+  p {
+    margin-bottom: 0.5rem;
   }
 
   small {
     display: block;
     color: $text-secondary;
+  }
+
+  &:hover,
+  &:focus {
+    img {
+      filter: saturate(0%) brightness(50%);
+    }
+
+    p {
+      text-decoration: underline;
+    }
   }
 }
